test/Serialization/runtime-import-from-sdk.code
/// Tests the fallback behavior for runtime library import paths. These should
/// prefer the resource directory, but fall back to the SDK.

// Assumption: We build the standard library with the compiler, so the default
// resource directory will contain a languagemodule for the standard library.

// %t/good-sdk contains a loadable standard library.
// RUN: %empty-directory(%t/good-sdk)
// RUN: %empty-directory(%t/good-sdk/usr/lib/language)
// RUN: cp -r %platform-module-dir/Codira.codemodule %t/good-sdk/usr/lib/language/Codira.codemodule

// %t/bad-sdk contains an invalid standard library that cannot be loaded.
// RUN: %empty-directory(%t/bad-sdk)
// RUN: %empty-directory(%t/bad-sdk/usr/lib/language/Codira.codemodule)
// RUN: touch %t/bad-sdk/usr/lib/language/Codira.codemodule/garbage-garbage-garbage.codemodule

// %t/empty-toolchain does not contain a standard library.
// RUN: %empty-directory(%t/empty-toolchain)
// RUN: %empty-directory(%t/empty-toolchain/usr/lib/language)

// FIXME: Until we have private imports, we need CodiraShims in the toolchain.
// RUN: cp -r %test-resource-dir/shims %t/empty-toolchain/usr/lib/language/shims

// %t/really-empty-toolchain does not contain a standard library or CodiraShims.
// RUN: %empty-directory(%t/really-empty-toolchain)
// RUN: %empty-directory(%t/really-empty-toolchain/usr/lib/language)

// If the compiler's resource directory does not contain a runtime languagemodule,
// we should fall back to the SDK.

// RUN: %empty-directory(%t/mcp)
// RUN: %target-language-frontend(mock-sdk: -sdk %t/good-sdk) -resource-dir %t/empty-toolchain/usr/lib/language -module-cache-path %t/mcp -typecheck -verify -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import %s

// If the compiler's resource directory *does* contain a runtime languagemodule, we
// should *not* use the one in the SDK. (We assume that the resource directory
// built with this compiler does contain a standard library.)

// RUN: %empty-directory(%t/mcp)
// RUN: %target-language-frontend(mock-sdk: -sdk %t/bad-sdk) -module-cache-path %t/mcp -typecheck -verify -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import %s

// If neither the resource directory nor the SDK contains a runtime languagemodule,
// loading should fail. This just proves that we aren't getting runtime imports
// some other way.
//
// We also check that ClangImporter noticed CodiraShims in the toolchain and
// didn't add a -isystem flag to look in the SDK.

// FIXME: We can't properly test this on a non-Darwin platform because we'll get
// the same error message for "unloadable standard library" and "no standard
// library" (https://github.com/apple/language/issues/52499).
// REQUIRES: objc_interop

// RUN: %empty-directory(%t/mcp)
// RUN: not %target-language-frontend(mock-sdk: -sdk %t/bad-sdk) -resource-dir %t/empty-toolchain/usr/lib/language -module-cache-path %t/mcp -typecheck %s -dump-clang-diagnostics -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import 2>&1 | %FileCheck --check-prefix CHECK-EMPTY %s
// CHECK-EMPTY-NOT: '-isystem' '{{.*}}/bad-sdk/usr/lib/language/shims'
// CHECK-EMPTY: error: could not find module 'Codira' for target '{{.*}}'; found: garbage-garbage-garbage, at: {{.*}}/Codira.codemodule

// Check that, when the toolchain *doesn't* have CodiraShims in it, ClagImporter
// *does* add a -I flag to look in the SDK.

// RUN: %empty-directory(%t/mcp)
// RUN: not %target-language-frontend(mock-sdk: -sdk %t/bad-sdk) -resource-dir %t/really-empty-toolchain/usr/lib/language -module-cache-path %t/mcp -typecheck %s -dump-clang-diagnostics -disable-implicit-concurrency-module-import -disable-implicit-string-processing-module-import 2>&1 | %FileCheck --check-prefix CHECK-REALLY-EMPTY %s
// CHECK-REALLY-EMPTY: '-isystem' '{{.*}}/bad-sdk/usr/lib/language/shims'
// CHECK-REALLY-EMPTY: error: could not find module 'Codira' for target '{{.*}}'; found: garbage-garbage-garbage, at: {{.*}}/Codira.codemodule

immutable x: Int = 1
